Version 100alpha1, January 29, 1998
Changed class syntax, splitting public clause use into:
 public : defines ivars not in superclass
 override : defines ivars already in superclass
Changed empty superclass from the empty list to object%;
 every class initialization must call super-init
Added ivar-in-interface?
Changed interface: raises an exception if a superinterface
 declares a variable that is also declared in the interface
 expression
Removed letrec*; letrec has the same semantics
Internal definitions are allowed only at the beginning of lambda,
 case-lambda, let, let-values, let*, let*-values,
 letrec, letrec-values, fluid-let, let-macro, let-id-macro,
 let-expansion-time, parameterize, and with-handlers
begin expressions are flattened in an internal-definition context
(begin) allowed in a top-level, unit, or internal-definition
 context
Self-import is now allowed for unit linking
Removed constant-name and constant-name-all-globals
Removed secure-primitive-exception-types
Removed readable type symbols (e.g., #<procedure>)
Removed semaphore-callback (MrEd now has queue-callback)
Removed parameterizations (but not parameters!)
Fixed unfairness in threads (perpetually creating threads
 would starve certain threads, particularly the main thread)
Unreachable thread blocked on an unreachable semaphore is
 garbage-collectable
Added channels
Added current-memory-use
Changed TCP writes to block when the underlying implementation
 blocks, and removed tcp-port-send-waiting?
Asynchronous breaks are now disabled during dynamic-wind
 pre and post thunks
Removed user-break-poll-handler; spawn a thread that sleeps and
 calls break-thread, instead
Removed dynamic-enable-break (no long needed since dynamic-wind
 post thunks can't be broken), but moved it to MzLib's thread.ss
Renamed the call-with-escaping-continution procedure to
 call-with-escape-continution (call/ec is unchanged)
Finished with-continuation-mark and current-continuation-marks